Fixed mobile overflow & past button link.

--- a/src/assets/scss/components/_page-hero.scss
+++ b/src/assets/scss/components/_page-hero.scss
@@ -4,7 +4,7 @@
 		.cell {
 
 			h1 {
-				font-size: 6.5rem;
+				font-size: 4.5rem;
 				font-family:'Monoton',cursive;
 				color:$primary-color;
 				font-weight: 700;
@@ -14,6 +14,10 @@
 					color:$white;
 					text-shadow: 2px 2px #3e404c;
 					font-family: 'Roboto',sans-serif;
+				}
+				@include breakpoint(large)
+				{
+					font-size: 6.5rem;
 				}
 			}
 
