--- a/src/assets/scss/global/_layout.scss
+++ b/src/assets/scss/global/_layout.scss
@@ -13,7 +13,11 @@
 		border-bottom: 2px solid $primary-color;
 		margin-bottom: 2rem;
 		font-weight: 700;
-		font-size: 4.5rem;
+		font-size: 3.5rem;
+		@include breakpoint(large)
+		{
+			font-size: 4.5rem;
+		}
 	}
 	h4 {
 		font-size: 4rem;
@@ -65,7 +69,11 @@
 		border-bottom: 2px solid $primary-color;
 		margin-bottom: 2rem;
 		font-weight: 700;
-		font-size: 4.5rem;
+		font-size: 3.5rem;
+		@include breakpoint(large)
+		{
+			font-size: 4.5rem;
+		}
 	}
 	p {
 		display:block;
@@ -115,7 +123,11 @@
 		border-bottom: 2px solid $primary-color;
 		margin-bottom: 2rem;
 		font-weight: 700;
-		font-size: 4.5rem;
+		font-size: 3.5rem;
+		@include breakpoint(large)
+		{
+			font-size: 4.5rem;
+		}
 	}
 }
 
